# zenproxy

./: Cargo.toml  README.md  config.toml
examples/: README.md  config.json
sing-box-zenproxy/docs/configuration/experimental/: clash-api.md  clash-api.zh.md
sing-box-zenproxy/experimental/clashapi/: bindings.go  proxy_manage.go  server.go
sing-box-zenproxy/option/: experimental.go
src/: config.rs  db.rs  main.rs
src/api/: admin.rs  auth.rs  fetch.rs  mod.rs  relay.rs  subscription.rs
src/parser/: clash.rs  mod.rs  v2ray.rs
src/pool/: manager.rs  validator.rs
src/quality/: checker.rs
src/singbox/: process.rs
src/web/: admin.html  docs.html  user.html
zenproxy-desktop/: README.md
zenproxy-desktop/src-tauri/: Cargo.toml  tauri.conf.json
zenproxy-desktop/src-tauri/src/: lib.rs  main.rs
zenproxy-desktop/ui/: app.js  index.html  styles.css
